--- a/app/index.html
+++ b/app/index.html
@@ -54,6 +54,7 @@
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-spotify/dist/angular-spotify.min.js"></script>
     <script src="bower_components/angular-bootstrap-colorpicker/js/bootstrap-colorpicker-module.js"></script>
+    <script src="bower_components/html2canvas/dist/html2canvas.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
