--- a/index.html
+++ b/index.html
@@ -1,25 +1,3 @@
-<!doctype html>
-<html class="no-js">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-    <link rel="stylesheet" href="styles/vendor.a4264c91.css">
-    <link rel="stylesheet" href="styles/main.372d81ce.css">
-  </head>
-  <body ng-app="posterboyApp">
-    <div ng-view></div>
-    <script type="text/javascript" src="http://tracking.musixmatch.com/t1.0/AMa6hJCIEzn1v8RuOP">
-
-
-    <!--[if lt IE 9]>
+<!doctype html> <html class="no-js"> <head> <meta charset="utf-8"> <title></title> <meta name="description" content=""> <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no"> <!-- Place favicon.ico and apple-touch-icon.png in the root directory --> <link rel="stylesheet" href="styles/vendor.a4264c91.css"> <link rel="stylesheet" href="styles/main.b4b09fa3.css"> <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">  <body ng-app="posterboyApp"> <div ng-view></div> <script type="text/javascript" src="http://tracking.musixmatch.com/t1.0/AMa6hJCIEzn1v8RuOP"></script> <!--[if lt IE 9]>
     <script src="scripts/oldieshim.bfe322b1.js"></script>
-    <![endif]-->
-
-    <script src="scripts/vendor.410a6d18.js"></script>
-
-        <script src="scripts/scripts.75f92048.js"></script>
-</body>
-</html>
+    <![endif]--> <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script> <script src="scripts/vendor.875fc9c9.js"></script> <script src="scripts/scripts.44b86d2e.js"></script>  
